# academic_topic_model

./: Makefile  README.md  pyproject.toml
pipeline/: run_hdbscan.py  run_umap.py
pipeline/clustering/: README.md  clustering.py  environment.yml
pipeline/embedding/: README.md  environment.yaml
pipeline/embedding/src/: config.yaml  embed.py  inference.py
pipeline/topics/: README.md  topic_hierarchy.py  topic_labelling.py  topic_modelling.py  utils.py
pipeline/utils/: base.py  knn.py  llm.py
